--- a/kadınemegi/style.css
+++ b/kadınemegi/style.css
@@ -10,7 +10,7 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #db7bec;
+  background-color: #db7093;
   padding: 10px 20px;
 }
 
