sayfalar yüklendi ve routers mantığı oluşturuldu

--- a/kadimEmegi_Ejs/views/index.ejs
+++ b/kadimEmegi_Ejs/views/index.ejs
@@ -1,11 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kadin Emegi</title>
-</head>
-<body>
-    <h1>Welcome to Kadin Emegi Platform</h1>
-</body>
-</html>
+<!-- views/index.ejs -->
+<%- include('partials/header') %>
+<%- include('partials/navbar') %>
+<h1>Hoşgeldiniz Kadın Emeği Platformu</h1>
+<p>El emeği ürünlerinizi burada paylaşabilir ve satabilirsiniz.</p>
+<%- include('partials/footer') %>
