--- a/kadimEmegi_Ejs/views/certificates/upload.ejs
+++ b/kadimEmegi_Ejs/views/certificates/upload.ejs
@@ -1,8 +1,8 @@
-<%- include('partials/header') %>
+<%- include('../partials/header.ejs') %>
 <h1>Sertifika Yükle</h1>
 <form method="POST" action="/certificates/upload" enctype="multipart/form-data">
   <input type="text" name="certificate_name" placeholder="Sertifika Adı" required />
   <input type="file" name="certificate" />
   <button type="submit">Sertifika Yükle</button>
 </form>
-<%- include('partials/footer') %>
+<%- include('../partials/footer.ejs') %>
