--- a/kadimEmegi_Ejs/views/listings/add.ejs
+++ b/kadimEmegi_Ejs/views/listings/add.ejs
@@ -1,4 +1,4 @@
-<%- include('partials/header') %>
+<%- include('../partials/header.ejs') %>
 <h1>İlan Ekle</h1>
 <form method="POST" action="/listings/add" enctype="multipart/form-data">
   <input type="text" name="title" placeholder="İlan Başlığı" required />
@@ -14,4 +14,4 @@
   <input type="file" name="image" />
   <button type="submit">İlanı Yayınla</button>
 </form>
-<%- include('partials/footer') %>
+<%- include('../partials/footer.ejs') %>
