--- a/kadimEmegi_Ejs/views/user_dashboard.ejs
+++ b/kadimEmegi_Ejs/views/user_dashboard.ejs
@@ -10,6 +10,7 @@
         <br>
         <small>Ekleyen: <%= listing.username %></small>
         <br>
+        <!-- Resim Yolu Güncellendi -->
         <img src="<%= listing.image_path %>" alt="<%= listing.title %>" style="max-width: 200px;">
       </li>
     <% }); %>
