--- a/kadimEmegi_Ejs/views/user_dashboard.ejs
+++ b/kadimEmegi_Ejs/views/user_dashboard.ejs
@@ -80,7 +80,7 @@
       </li>
     <% }); %>
   </ul>
-  <a href="/checkout">Ödeme Sayfasına Git</a>
+  <a href="/orders/checkout">Ödeme Sayfasına Git</a>
 <% } else { %>
   <p>Sepetinizde ürün bulunmamaktadır.</p>
 <% } %>
