mesajlaşma sistemi çalıştı

--- a/kadimEmegi_Ejs/views/partials/footer.ejs
+++ b/kadimEmegi_Ejs/views/partials/footer.ejs
@@ -1,5 +1,21 @@
 <footer>
     <p>&copy; 2024 Kadın Emeği | Tüm Hakları Saklıdır.</p>
 </footer>
-</body>
-</html>
+
+<!-- styles for footer -->
+<style>
+    footer {
+        background-color: #f3a8b4;
+        text-align: center;
+        padding: 10px 0;
+        position: fixed;
+        width: 100%;
+        bottom: 0;
+    }
+
+    footer p {
+        font-size: 1em;
+        color: white;
+        margin: 0;
+    }
+</style>
