--- a/kadimEmegi_Ejs/views/user_dashboard.ejs
+++ b/kadimEmegi_Ejs/views/user_dashboard.ejs
@@ -180,16 +180,16 @@ body {
       <ul style="list-style-type: none; padding: 0; display: grid; grid-template-columns: repeat(auto-fill, minmax(300px, 1fr)); gap: 20px;">
         <% allListings.forEach(listing => { %>
           <li style="background-color: #fff; border: 1px solid #ddd; border-radius: 8px; padding: 15px; box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); display: flex; flex-direction: column; justify-content: space-between; text-align: center;">
-            <strong style="font-size: 1.2rem; margin-bottom: 10px;"><%= listing.title %></strong> - <%= listing.price %> TL
-            <br>
-            <small>Ekleyen: <%= listing.username %></small>
-            <br>
-            <small>Kategori: <%= listing.category %></small>
-            <br>
-            <small>Açıklama: <%= listing.description %></small>
-            <br>
+            <strong style="font-size: 1.2rem; margin-bottom: 10px;"><%= listing.title %></strong>  <%= listing.price %> TL
+            
+           
             <img src="<%= listing.image_path %>" alt="<%= listing.title %>" style="max-width: 100%; height: auto; border-radius: 8px; margin: 10px 0;">
-  
+            <small>Ekleyen: <%= listing.username %></small>
+            
+            <small>Kategori: <%= listing.category %></small>
+            
+            <small>Açıklama: <%= listing.description %></small>
+            
             <!-- Sepete Ekle Butonu -->
             <form method="POST" action="/cart/add" style="margin-top: 10px;">
               <input type="hidden" name="listing_id" value="<%= listing.id %>">
